--- a/src/view/DialogMantenimientoMedida.form
+++ b/src/view/DialogMantenimientoMedida.form
@@ -160,8 +160,8 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jPanel4" alignment="0" pref="887" max="32767" attributes="0"/>
-                          <Component id="jPanel3" alignment="0" pref="887" max="32767" attributes="0"/>
+                          <Component id="jPanel4" alignment="0" pref="893" max="32767" attributes="0"/>
+                          <Component id="jPanel3" alignment="0" max="32767" attributes="0"/>
                           <Group type="102" alignment="1" attributes="0">
                               <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
@@ -222,91 +222,109 @@
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <EmptySpace min="264" pref="264" max="264" attributes="0"/>
-                          <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <EmptySpace min="14" pref="14" max="14" attributes="0"/>
-                          <Component id="TxtDepartamento" min="-2" pref="75" max="-2" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                          <Component id="TxtProvincia" min="-2" pref="75" max="-2" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                          <Component id="TxtDistrito" min="-2" pref="75" max="-2" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                          <Component id="TxtSeccion" min="-2" pref="75" max="-2" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                          <Component id="TxtManzana" min="-2" pref="75" max="-2" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                          <Component id="TxtLote" min="-2" pref="75" max="-2" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                          <Component id="TxtConexion" min="-2" pref="75" max="-2" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                          <Component id="TxtCodigoInscripcion" min="-2" pref="210" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <EmptySpace min="14" pref="14" max="14" attributes="0"/>
-                          <Component id="jLabel6" min="-2" pref="75" max="-2" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                          <Component id="jLabel7" min="-2" pref="75" max="-2" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                          <Component id="jLabel8" min="-2" pref="75" max="-2" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                          <Component id="jLabel10" min="-2" pref="75" max="-2" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                          <Component id="jLabel11" min="-2" pref="75" max="-2" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                          <Component id="jLabel12" min="-2" pref="75" max="-2" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                          <Component id="jLabel13" min="-2" pref="75" max="-2" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                          <Component id="jLabel14" min="-2" pref="210" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <EmptySpace min="14" pref="14" max="14" attributes="0"/>
-                          <Component id="TxtRutaLectura" min="-2" pref="140" max="-2" attributes="0"/>
-                          <EmptySpace min="10" pref="10" max="10" attributes="0"/>
-                          <Component id="TxtRutaReparto" min="-2" pref="140" max="-2" attributes="0"/>
-                          <EmptySpace min="10" pref="10" max="10" attributes="0"/>
-                          <Component id="TxtSecuencia" min="-2" pref="140" max="-2" attributes="0"/>
-                          <EmptySpace min="10" pref="10" max="10" attributes="0"/>
-                          <Component id="TxtCategoria" min="-2" pref="140" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <EmptySpace min="14" pref="14" max="14" attributes="0"/>
-                          <Component id="jLabel15" min="-2" pref="140" max="-2" attributes="0"/>
-                          <EmptySpace min="10" pref="10" max="10" attributes="0"/>
-                          <Component id="jLabel16" min="-2" pref="140" max="-2" attributes="0"/>
-                          <EmptySpace min="10" pref="10" max="10" attributes="0"/>
-                          <Component id="jLabel17" min="-2" pref="140" max="-2" attributes="0"/>
-                          <EmptySpace min="10" pref="10" max="10" attributes="0"/>
-                          <Component id="jLabel18" min="-2" pref="140" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" attributes="0">
+                                  <EmptySpace min="264" pref="264" max="264" attributes="0"/>
+                                  <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" attributes="0">
+                                  <EmptySpace min="14" pref="14" max="14" attributes="0"/>
+                                  <Component id="jLabel15" min="-2" pref="140" max="-2" attributes="0"/>
+                                  <EmptySpace min="10" pref="10" max="10" attributes="0"/>
+                                  <Component id="jLabel16" min="-2" pref="140" max="-2" attributes="0"/>
+                                  <EmptySpace min="10" pref="10" max="10" attributes="0"/>
+                                  <Component id="jLabel17" min="-2" pref="140" max="-2" attributes="0"/>
+                                  <EmptySpace min="10" pref="10" max="10" attributes="0"/>
+                                  <Component id="jLabel18" min="-2" pref="140" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" attributes="0">
+                                  <EmptySpace min="14" pref="14" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Group type="102" alignment="0" attributes="0">
+                                                  <Component id="TxtDepartamento" min="-2" pref="75" max="-2" attributes="0"/>
+                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                                  <Component id="TxtProvincia" min="-2" pref="75" max="-2" attributes="0"/>
+                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                                  <Component id="TxtDistrito" min="-2" pref="75" max="-2" attributes="0"/>
+                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                                  <Component id="TxtSeccion" min="-2" pref="75" max="-2" attributes="0"/>
+                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                                  <Component id="TxtManzana" min="-2" pref="75" max="-2" attributes="0"/>
+                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                                  <Component id="TxtLote" min="-2" pref="75" max="-2" attributes="0"/>
+                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                                  <Component id="TxtConexion" min="-2" pref="75" max="-2" attributes="0"/>
+                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                                  <Component id="TxtCodigoInscripcion" min="-2" pref="180" max="-2" attributes="0"/>
+                                              </Group>
+                                              <Group type="102" alignment="0" attributes="0">
+                                                  <Component id="jLabel6" min="-2" pref="75" max="-2" attributes="0"/>
+                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                                  <Component id="jLabel7" min="-2" pref="75" max="-2" attributes="0"/>
+                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                                  <Component id="jLabel8" min="-2" pref="75" max="-2" attributes="0"/>
+                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                                  <Component id="jLabel10" min="-2" pref="75" max="-2" attributes="0"/>
+                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                                  <Component id="jLabel11" min="-2" pref="75" max="-2" attributes="0"/>
+                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                                  <Component id="jLabel12" min="-2" pref="75" max="-2" attributes="0"/>
+                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                                  <Component id="jLabel13" min="-2" pref="75" max="-2" attributes="0"/>
+                                                  <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                                                  <Component id="jLabel14" min="-2" pref="180" max="-2" attributes="0"/>
+                                              </Group>
+                                          </Group>
+                                          <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
+                                          <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Group type="102" alignment="0" attributes="1">
+                                          <Component id="TxtRutaLectura" min="-2" pref="140" max="-2" attributes="0"/>
+                                          <EmptySpace min="10" pref="10" max="10" attributes="0"/>
+                                          <Component id="TxtRutaReparto" min="-2" pref="140" max="-2" attributes="0"/>
+                                          <EmptySpace min="10" pref="10" max="10" attributes="0"/>
+                                          <Component id="TxtSecuencia" min="-2" pref="140" max="-2" attributes="0"/>
+                                          <EmptySpace min="10" pref="10" max="10" attributes="0"/>
+                                          <Component id="TxtCategoria" min="-2" pref="140" max="-2" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                              </Group>
+                          </Group>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
                           <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="3" pref="3" max="3" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="TxtDepartamento" min="-2" max="-2" attributes="0"/>
-                              <Component id="TxtProvincia" min="-2" max="-2" attributes="0"/>
-                              <Component id="TxtDistrito" min="-2" max="-2" attributes="0"/>
-                              <Component id="TxtSeccion" min="-2" max="-2" attributes="0"/>
-                              <Component id="TxtManzana" min="-2" max="-2" attributes="0"/>
-                              <Component id="TxtLote" min="-2" max="-2" attributes="0"/>
-                              <Component id="TxtConexion" min="-2" max="-2" attributes="0"/>
-                              <Component id="TxtCodigoInscripcion" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jLabel6" min="-2" pref="20" max="-2" attributes="0"/>
-                              <Component id="jLabel7" min="-2" pref="20" max="-2" attributes="0"/>
-                              <Component id="jLabel8" min="-2" pref="20" max="-2" attributes="0"/>
-                              <Component id="jLabel10" min="-2" pref="20" max="-2" attributes="0"/>
-                              <Component id="jLabel11" min="-2" pref="20" max="-2" attributes="0"/>
-                              <Component id="jLabel12" min="-2" pref="20" max="-2" attributes="0"/>
-                              <Component id="jLabel13" min="-2" pref="20" max="-2" attributes="0"/>
-                              <Component id="jLabel14" min="-2" pref="20" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="jButton1" alignment="1" max="32767" attributes="1"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="TxtDepartamento" min="-2" max="-2" attributes="0"/>
+                                      <Component id="TxtProvincia" min="-2" max="-2" attributes="0"/>
+                                      <Component id="TxtDistrito" min="-2" max="-2" attributes="0"/>
+                                      <Component id="TxtSeccion" min="-2" max="-2" attributes="0"/>
+                                      <Component id="TxtManzana" min="-2" max="-2" attributes="0"/>
+                                      <Component id="TxtLote" min="-2" max="-2" attributes="0"/>
+                                      <Component id="TxtConexion" min="-2" max="-2" attributes="0"/>
+                                      <Component id="TxtCodigoInscripcion" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="jLabel6" min="-2" pref="20" max="-2" attributes="0"/>
+                                      <Component id="jLabel7" min="-2" pref="20" max="-2" attributes="0"/>
+                                      <Component id="jLabel8" min="-2" pref="20" max="-2" attributes="0"/>
+                                      <Component id="jLabel10" min="-2" pref="20" max="-2" attributes="0"/>
+                                      <Component id="jLabel11" min="-2" pref="20" max="-2" attributes="0"/>
+                                      <Component id="jLabel12" min="-2" pref="20" max="-2" attributes="0"/>
+                                      <Component id="jLabel13" min="-2" pref="20" max="-2" attributes="0"/>
+                                      <Component id="jLabel14" min="-2" pref="20" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
                           </Group>
                           <EmptySpace min="20" pref="20" max="20" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
@@ -609,6 +627,16 @@
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="TxtCategoria">
+                </Component>
+                <Component class="javax.swing.JButton" name="jButton1">
+                  <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/util/user-search.gif"/>
+                    </Property>
+                    <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
+                      <Insets value="[0, 0, 0, 0]"/>
+                    </Property>
+                  </Properties>
                 </Component>
               </SubComponents>
             </Container>
