--- a/src/view/FrameSistemaMenu.form
+++ b/src/view/FrameSistemaMenu.form
@@ -226,6 +226,9 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="TblListadoRegistroMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
